# TPproject

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: LOTR_CI.yml
source/: CMakeLists.txt  Creatures.cpp  Creatures.h  Dragon.cpp  Dragon.h  Game.cpp  Game.h  Gendalf.cpp  Gendalf.h  Gendalf_types.cpp  Gendalf_types.h  Location.cpp  Location.h  Locations.cpp  Locations.h  Team.cpp  Team.h  creature_factory.cpp  creature_factory.h  interface_factory.h  main.cpp
test/: CMakeLists.txt  dragon_creating_test.cpp  fight_testing.cpp  gendalf_creating_test.cpp  hobbits_creating_test.cpp  humans_creating_test.cpp  orcs_creating_test.cpp  team_testing.cpp
